[metadata]
name = glrmmr
version = 0.0.1
author = Tim Schubert
author_email = dadada@dadada.li
description = A webhook service to update Redmine with a link to a Gitlab MR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dadada/glrmmr
project_urls =
    Bug Tracker = https://github.com/dadada/glrmmr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = :find
python_requires = >=3.6
include_package_data = true
install_requires = 
    Flask
    python-dotenv
    requests
